plugins {
    id 'jacoco'
    id "org.sonarqube" version "2.8"
    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
}

group = 'com.wikia.tibia'
version = '1.2.0'
description = 'TibiaWikiBot'
sourceCompatibility = '14'
targetCompatibility = '14'

repositories {
    mavenLocal()
    mavenCentral()
}

ext {
    slf4jVersion = '1.8.0-beta4'
    jacksonVersion = '2.11.0'
    lombokVersion = '1.18.12'
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
    implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
    implementation "org.json:json:20190722"
    implementation "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}"
    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:${jacksonVersion}"
    implementation "org.skyscreamer:jsonassert:1.5.0"
    implementation "com.google.guava:guava:29.0-jre"
    implementation "io.vavr:vavr:0.10.2"
    testImplementation "junit:junit:4.13"
    testImplementation "org.mockito:mockito-core:3.3.3"
    testImplementation "org.hamcrest:hamcrest-core:2.2"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
}

compileKotlin {
    kotlinOptions.jvmTarget = "14"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "14"
}

sonarqube {
    properties {
        property "sonar.projectName", "TibiaWikiBot"
        property "sonar.projectKey", "com.onlaika:TibiaWikiBot"
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
    useJUnit()

    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
